--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
-
-     <H1> Personal Details </H1>
-        <p>Am know by the above names, from Paya sub County in West budam north , in Tororo district.</p>
-
-      <h2>Software Developer</h2>
+<div>
+    <H1> Personal Details </H1>
+    <p>Am know by the above names, from Paya sub County in West budam north , in Tororo district.</p>
+</div>
+    
+<div>
+    <h2>Software Developer</h2>
+</div>
+      
       <hr>
 
         <p>My<i>favorite</i> things about programming is it makes me take coffee</p> 
